--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1",
     "react-native-webrtc": "^118.0.0",
+    "react-native-websocket": "^1.0.2",
     "react-native-webview": "^13.6.4",
     "react-redux": "^9.1.0",
+    "rn-fetch-blob": "^0.12.0",
     "zego-express-engine-reactnative": "^3.2.0"
   },
   "devDependencies": {
