--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "agora-rn-uikit": "^5.0.2",
     "axios": "^1.6.7",
     "core-js": "^3.23.3",
+    "debounce": "^2.0.0",
+    "dotenv": "^16.4.5",
     "emoji-mart": "^5.5.2",
     "firebase": "^10.7.1",
     "ionicons": "^7.2.2",
