--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.1",
+    "@rneui/themed": "^4.0.0-rc.8",
     "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.4.2",
     "@zegocloud/zego-uikit-rn": "^2.6.0",
     "agora-react-native-rtm": "^1.5.1",
@@ -32,6 +33,12 @@
     "debounce": "^2.0.0",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.9.2",
+    "expo-av": "^13.10.5",
+    "expo-document-picker": "^11.10.1",
+    "expo-image-picker": "^14.7.1",
+    "expo-modules-core": "^1.11.12",
+    "expo-status-bar": "^1.11.1",
     "firebase": "^10.7.1",
     "ionicons": "^7.2.2",
     "react": "18.2.0",
@@ -58,6 +65,7 @@
     "react-native-websocket": "^1.0.2",
     "react-native-webview": "^13.6.4",
     "react-redux": "^9.1.0",
+    "rn-emoji-picker": "^1.1.6",
     "rn-fetch-blob": "^0.12.0",
     "zego-express-engine-reactnative": "^3.2.0"
   },
