--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "Chat",
-  "displayName": "SeCom"
+  "displayName": "SeCom",
+  "expo": {
+    "plugins": ["@react-native-firebase/app", "@react-native-firebase/auth"]
+  }
 }
