--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@notifee/react-native": "^5.3.0",
+    "@react-native-firebase/analytics": "^19.1.1",
+    "@react-native-firebase/app": "^19.1.1",
+    "@react-native-firebase/auth": "^19.1.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -39,7 +42,7 @@
     "expo-image-picker": "^14.7.1",
     "expo-modules-core": "^1.11.12",
     "expo-status-bar": "^1.11.1",
-    "firebase": "^10.7.1",
+    "firebase": "^10.10.0",
     "ionicons": "^7.2.2",
     "react": "18.2.0",
     "react-delegate-component": "^1.0.0",
