--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@notifee/react-native": "^5.3.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/analytics": "^19.1.1",
     "@react-native-firebase/app": "^19.1.1",
     "@react-native-firebase/auth": "^19.1.1",
