--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@notifee/react-native": "^5.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-firebase/analytics": "^19.1.1",
     "@react-native-firebase/app": "^19.1.1",
     "@react-native-firebase/auth": "^19.1.1",
@@ -34,6 +35,7 @@
     "agora-rn-uikit": "^5.0.2",
     "axios": "^1.6.7",
     "core-js": "^3.23.3",
+    "date-fns": "^3.6.0",
     "debounce": "^2.0.0",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.5.2",
@@ -49,10 +51,12 @@
     "react-delegate-component": "^1.0.0",
     "react-native": "^0.73.4",
     "react-native-agora": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
@@ -63,6 +67,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^14.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1",
     "react-native-webrtc": "^118.0.0",
