--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.1",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.4.2",
-    "@zegocloud/zego-uikit-rn": "^2.6.0",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.6.0",
+    "@zegocloud/zego-uikit-rn": "^2.7.4",
+    "agora-access-token": "^2.0.4",
     "agora-react-native-rtm": "^1.5.1",
     "agora-rn-uikit": "^5.0.2",
+    "agora-token": "^2.0.3",
     "axios": "^1.6.7",
     "core-js": "^3.23.3",
+    "crypto": "^1.0.1",
     "date-fns": "^3.6.0",
     "debounce": "^2.0.0",
     "dotenv": "^16.4.5",
@@ -51,6 +54,7 @@
     "react-delegate-component": "^1.0.0",
     "react-native": "^0.73.4",
     "react-native-agora": "^4.2.6",
+    "react-native-appstate-listener": "^1.0.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.0",
@@ -76,7 +80,8 @@
     "react-redux": "^9.1.0",
     "rn-emoji-picker": "^1.1.6",
     "rn-fetch-blob": "^0.12.0",
-    "zego-express-engine-reactnative": "^3.2.0"
+    "zego-express-engine-reactnative": "^3.2.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
