--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.2.1",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@thyreality-inc/react-native-peerjs": "^1.0.4",
     "@zegocloud/zego-uikit-prebuilt-call-rn": "^4.6.0",
     "@zegocloud/zego-uikit-rn": "^2.7.4",
     "agora-access-token": "^2.0.4",
@@ -50,6 +51,8 @@
     "expo-status-bar": "^1.11.1",
     "firebase": "^10.10.0",
     "ionicons": "^7.2.2",
+    "path": "^0.12.7",
+    "peerjs": "^1.5.2",
     "react": "18.2.0",
     "react-delegate-component": "^1.0.0",
     "react-native": "^0.73.4",
@@ -67,6 +70,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
+    "react-native-peerjs": "^1.0.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
@@ -75,12 +79,14 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^5.2.1",
-    "react-native-webrtc": "^118.0.0",
+    "react-native-webrtc": "^118.0.7",
     "react-native-websocket": "^1.0.2",
-    "react-native-webview": "^13.6.4",
+    "react-native-webview": "^13.10.0",
     "react-redux": "^9.1.0",
     "rn-emoji-picker": "^1.1.6",
     "rn-fetch-blob": "^0.12.0",
+    "socket.io-client": "^4.7.5",
+    "stream": "^0.0.2",
     "zego-express-engine-reactnative": "^3.2.0",
     "zlib": "^1.0.5"
   },
