--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,6 +100,9 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            //cho phép hiển thị webview
+            manifestPlaceholders = [appAuthRedirectScheme: 'com.chat']
+
         }
     }
 }
